--- a/app/templates/Product/detail.latte
+++ b/app/templates/Product/detail.latte
@@ -1,57 +1,69 @@
 {layout '../parts/@layout.latte'}
 
 {block title}
-    {$product->name}
+	{$product->name}
 {/block}
 
 {block content}
-    {if $product}
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-8 offset-2 pl-0 pr-0">
-                <h1>{$product->name}</h1>
-                </div>
-            </div>
+	{if $product}
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-8 offset-2 pl-0 pr-0">
+					<h1>{$product->name}</h1>
+				</div>
+			</div>
 
-            <div class="row">
-                <div class="col-md-4 offset-md-2 col-sm-12 pl-0">
-                    <img src= "{$product->image}" alt="product image" class="img-thumbnail">
-                </div>
-                <div class="col-md-4 col-sm-12 pr-0">
-                <div class="row">
-                    <div class="col-12">
-                    <h5>Description:</h5>
-                    <p>
-                        {$product->description}
-                    </p>
-                    </div>
-                    <div class="col-12">
-                    <h5>Producer:</h5>
-                    <p>
-                        {$producer->name}
-                    </p>
-                    </div>
-                    <div class="col-12">
-                    <h5>Price:</h5>
-                    <p>
-                        {$product->price} €
-                    </p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-4 offset-4">
-                        <a href="#" class="btn btn-primary btn-lg active pl-5 pr-5" role="button" aria-pressed="true">Buy</a>
-                    </div>
-                </div>
-                </div>
-            </div>
-        </div>
-    {else}
-        <div class="row">
-            <div class="col-12">
-            <h1>Product with id {$id} doesn't exist</h1>
-            </div>
-        </div>
-    {/if}
+			<div class="row">
+				<div class="col-md-4 offset-md-2 col-sm-12 pl-0">
+					<img src="{$product->image}" alt="product image" class="img-thumbnail">
+				</div>
+				<div class="col-md-4 col-sm-12 pr-0">
+					<div class="row">
+						<div class="col-12">
+							<h5>Vyrobca:</h5>
+							<p>
+								{$producer->name}
+							</p>
+						</div>
+						<div class="col-12">
+							<h5>Cena:</h5>
+							<p>
+								{$product->price} €
+							</p>
+						</div>
+						<div class="col-12">
+							<h5>Popis:</h5>
+							<p>
+								{$product->description}
+							</p>
+						</div>
+						<div class="col-12">
+							{if $product->count != 0}
+								<p>
+									<i><b>Skladom {$product->count} ks</b></i>
+								</p>
+							{else}
+								<p>
+									<i><b>Predpokladany cas dorucenia: XXX</b></i>
+								</p>
+							{/if}
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-4 offset-4">
+							<a href="#" class="btn btn-primary btn-lg active pl-5 pr-5" role="button"
+							   aria-pressed="true">Buy</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	{else}
+		<div class="row">
+			<div class="col-12">
+				<h1>Product with id {$id} doesn't exist</h1>
+			</div>
+		</div>
+	{/if}
 
 {/block}
