--- a/app/templates/Cart/default.latte
+++ b/app/templates/Cart/default.latte
@@ -5,22 +5,31 @@
 {/block}
 
 {block content}
-	<div class="container">
+	<div class="container-fluid content">
 		{foreach $products as $id => [$product, $count]}
-			<div class="row border">
-				<div class="col-3">
-					<img src="{$product->image}" alt="product image" class="img-thumbnail">
+			<div class="row border-bottom pb-2 pt-2 border-dark">
+				<div class="col-2 offset-2 pl-0 d-flex align-items-center">
+					<img src="{$product->image}" alt="product image" class="img-thumbnail" width="100">
 				</div>
-				<div class="col-3">
+				<div class="col-2 d-flex align-items-center">
 					{$product->name}
 				</div>
-				<div class="col-2">
-					{$count}
+				<div class="col-2 d-flex align-items-center">
+					{form summaryForm}
+						{input count}
+					{/form}
 				</div>
-				<div class="col-4">
+				<div class="col-2 d-flex justify-content-end pr-0 align-items-center">
 					delete
 				</div>
 			</div>
 		{/foreach}
+		<div class="row mt-3">
+			<div class="col-8 pr-0 offset-2 d-flex justify-content-end">
+				{form summaryForm}
+					{input summary}
+				{/form}
+			</div>
+		</div>
 	</div>
 {/block}
