--- a/app/AdminModule/templates/Order/edit.latte
+++ b/app/AdminModule/templates/Order/edit.latte
@@ -7,28 +7,8 @@
 {block content}
     {if $order}
         <div class="col-10 offset-1">
-                <form>
-                    <div class="form-row">
-                        <div class="col form-group">
-                            <input type="text" class="form-control" value="{$order->status}">
-                        </div>
-                        <div class="col form-group">
-                            <input type="text" class="form-control" value="{$order->city}">
-                        </div>
-                        <div class="col form-group">
-                            <input type="text" class="form-control" value="{$order->zip}">
-                        </div>
-                        <div class="col form-group">
-                            <input type="text" class="form-control" value="{$order->address}">
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="col form-group">
-                            <button type="submit" class="btn btn-primary">Save</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
+            {control editForm}
+        </div>
     {else}
         Produkt neexistuje {*TODO pridat hlasku*}
     {/if}
